clusters/apps/env/production/media/syncthing/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: music.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`bs-sync.${FAMILY_DOMAIN}`)"
      priority: 10
      middlewares:
        - name: authentik
          namespace: auth-system
      services:
        - name: syncthing
          port: 8384
  tls:
    secretName: crj-wildcard-certificate
    domains:
      - main: bs-sync.${FAMILY_DOMAIN}
